--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,19 @@ name: Deploy
 
 on:
   push:
-    branches:
+    branches: 
       - master
-  jobs:
-    build:
-      runs-on: ubuntu-latest
-      strategy:
-        max-parallel: 4
-        matrix:
-          python-version: [3.6]
-      steps:
-      - uses: actions/checkout@v3
-      - name: executing remote ssh commands using password
+jobs:
+  build:
+  
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.6]
+    steps:
+    - uses: actions/checkout@v3
+    - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@master
       with:
         host: --IP адрес сервера--
@@ -21,7 +22,7 @@ on:
         password: ${{ secrets.PASSWORD }}
         port: 22
         script: |
-          cd ./TelegramBotDjango/djangobot
+          cd папка, в которой находится проект
           source ./venv/bin/activate
           git pull
           python manage.py migrate
