--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,41 @@
-name: Deploy
-
-on:
-  push:
+name: Deploy 
+ 
+on: 
+  push: 
     branches: 
-      - main
-jobs:
-  build:
-  
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.9]
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@master
-      with:
-        host: 207.154.217.158
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: 22
-        script: |
+      - main 
+ 
+jobs: 
+  build: 
+    runs-on: ubuntu-latest 
+ 
+    strategy: 
+      max-parallel: 4 
+      matrix: 
+        python-version: [3.9] 
+ 
+    steps: 
+    - uses: actions/checkout@v3 
+    - name: Set up Python ${{ matrix.python-version }} 
+      uses: actions/setup-python@v3 
+      with: 
+        python-version: ${{ matrix.python-version }} 
+      - name: Install Dependencies 
+        run: | 
+          python -m pip install --upgrade pip 
+          pip install -r requirements.txt 
+      - name: Run Tests 
+        run: | 
+          python manage.py test 
+      - name: executing remote ssh commands using password 
+        username: ${{ secrets.USERNAME }} 
+        password: ${{ secrets.PASSWORD }} 
+        port: 22 
+        script: | 
+ 
           cd ./TelegramBotDjango/djangobot
-          source ./venv/bin/activate
-          git pull
-          python manage.py migrate
-          python manage.py collectstatic --noinput
+          source ./ven/bin/activate 
+          git pull 
+          python manage.py migrate 
+          python manage.py collectstatic --noinput 
           supervisorctl restart all
