--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python TelegramBotDjango/djangobot/manage.py test
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@master
       with:
